@@ -402,6 +402,24 @@ static struct test_segment {
       "8466 3 52737 4096 3456 {7099,8153}",
       6, 0, NOT_ALL_PRIVATE, 4096, 4, 8466 },
   },
+  { /* 25 */ 
+    "zero-size overflow",
+    "#ASNs = 0, data = seq(8466 3 52737 4096 3456)",
+    { 0x2,0x0, 0x21,0x12, 0x00,0x03, 0xce,0x01, 0x10,0x00, 0x0d,0x80 },
+    12,
+    { "", "",
+      0, 0, 0, 0, 0, 0 },
+  },
+  { /* 26  */ 
+    "zero-size overflow + valid segment",
+    "seq(#AS=0:8466 3 52737),seq(4096 3456)",
+    { 0x2,0x0, 0x21,0x12, 0x00,0x03, 0xce,0x01, 
+      0x2,0x2, 0x10,0x00, 0x0d,0x80 },
+    14
+    ,
+    { "", "",
+      0, 0, 0, 0, 0, 0 },
+  },
   { NULL, NULL, {0}, 0, { NULL, 0, 0 } }
 };
 
